[package]
name = "st"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Minimal statistical utility written in Rust"

homepage = "https://github.com/chadbrewbaker/st"
repository = "https://github.com/chadbrewbaker/st"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-stats = "0.2"
clap = { version = "3.1.6", features = ["derive"] }
